Add cache CRUD API
